packages/next-swc/crates/next-dev-tests/tests/integration/next/error/ssr/input/app/broken-app/page.tsx
export default function Page() {
  throw new Error('Broken app')
}
